# OpenAI-Agent-SDK

./: .gitignore  README.md
agent-patterns/: config.py  evaluator_optimizer.py  orchestrator_workers.py  output_guardrails.py  parallelization.py  prompt_chaining.py  pyproject.toml  routing.py  streaming_gaurdrail.py
hello_agent/: pyproject.toml
hello_agent/src/hello_agent/: main.py  streaming.py
openai_agent_chatbot/: .gitignore  pyproject.toml
openai_agent_chatbot/src/openai_agent_chatbot/: main.py
openai_agent_chatbot/src/openai_agent_chatbot/tools/: weather_tool.py
personal_study_assistant/: .env.example  README.md  pyproject.toml
personal_study_assistant/src/personal_study_assistant/: app.py  context.py  main.py  manager.py
personal_study_assistant/src/personal_study_assistant/agents/: research_agent.py  scheduler_agent.py  summarizer_agent.py
personal_study_assistant/src/personal_study_assistant/guardrails/: research_agent_guardrails.py  summarizer_agent_guardrails.py
personal_study_assistant/src/personal_study_assistant/tools/: tavily_search_tool.py
research_bot/: README.md  pyproject.toml
research_bot/src/research_bot/: app.py  config.py  main.py  manager.py
research_bot/src/research_bot/agents/: planner_agent.py  search_agent.py  writer_agent.py
