[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MoosaAfzal2", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
    "python-dotenv>=1.1.0",
]

[project.scripts]
hello-agent = "hello_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
