[project]
name = "openai-agent-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MoosaAfzal2", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents>=0.0.9",
]

[project.scripts]
openai-agent-chatbot = "openai_agent_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
