[project]
name = "research-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MoosaAfzal2", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
]

[project.scripts]
research-bot = "research_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
